# variant

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  conanfile.py
cmake/: variant-config.cmake.in
examples/: CMakeLists.txt  example1.cc
include/variant/: variant.hpp
tests/: CMakeLists.txt  tests.cc  variant_test.cc  visitor_test.cc
